
syntax = "proto3";

package vrf;

service VrfService {
    rpc GenerateKeys (Empty) returns (PublicKey);
    rpc GenerateRandomNumber (PublicKey) returns (RandomNumberResponse);
}

message Empty {}

message PublicKey {
    bytes data = 1;
}

message RandomNumberResponse {
    bytes random_number = 1;
    bytes proof_msg = 2;
    bytes proof_sig = 3;
}
